--- a/final.html
+++ b/final.html
@@ -43,6 +43,6 @@ var deny = "You have no voice in the government! ";
 // };
 
 </script>
-<img width="360" src="Media/Eagle1.jpg"/>
+<img width="360" src="JS-HW/Media/Eagle1.jpg"/>
 
 </html>
