--- a/final.html
+++ b/final.html
@@ -44,6 +44,6 @@ var deny = "You have no voice in the government! ";
 
 </script>
 
-<img width="360" src="Media/01.jpg"/>
+<img width="360" src="Media/01.JPG"/>
 
 </html>
