--- a/final.html
+++ b/final.html
@@ -44,6 +44,6 @@ var deny = "You have no voice in the government! ";
 
 </script>
 
-<img width="1080" src="Media/EAGLE.jpg"/>
+<img width="1080" src="MEDIA/EAGLE.jpg"/>
 
 </html>
